--- a/sass/main.scss
+++ b/sass/main.scss
@@ -88,19 +88,12 @@ body {
     margin: 0 auto;
 }
 
-// .footer {
-//     color: $light-gray;
-//     background: $dark-gray;
-//     padding: 3em;
-// }
-// .footer span {
-//     text-align: center;
-// }
 
 /*------------------------- Footer*/
 
 .footer {
     @include flex-center;
+    flex-direction: column;
     padding: $gutter;
     padding-top: $gutter *1.5;
     color: $light-gray;
@@ -108,9 +101,12 @@ body {
 
 .link {
     color: $light-gray;
+    &:hover {
+        color: white;
+    }
 }
 
-.footer span {
+.footer h6 {
     text-align: center;
 }
 
